# matrix-gesture-cpp-sdk

./: CMakeLists.txt  Dockerfile  README.md  contributors.txt  gesture_manager.h
docker/: CMakeLists.txt  example.cpp  gesture_test
docker/classifiers/: pinch_v3_cascade_trdepth9
linux/: CMakeLists.txt  gesture_manager.h
windows/: README.md  gesture.lib  gesture_manager.h
